<resources>
    <string name="app_name">FindActivityFriend</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Login</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="find_your_actity_friend">May be Logo or Background Image</string>
    <string name="login_with_facebook">Login  with  Facebook</string>
    <string name="don_t_have_an_account">Don\'t have an account ?</string>
    <string name="i_accept_the_terms_of_service_or_i_accept_the_privacy_statement">I accept the <a href="Terms:">Terms of Service</a> and <a href="Privacy:">Privacy Policy.</a></string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="facebook_app_id">663799240916981</string>
    <string name="fb_login_protocol_scheme">fb663799240916981</string>

</resources>